<resources>
    <string-array name="type_array">
        <item>Metal</item>
        <item>Plastic</item>
        <item>Paper</item>
    </string-array>
    <string name="app_name" translatable="false">WOW RECYCLE</string>
    <string name="title_event">Event</string>
    <string name="title_book">Book</string>
    <string name="title_reward">Reward</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_second" translatable="false">WOW Recycle</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="event_button">Event Button</string>
    <string name="book_button">Book Button</string>
    <string name="profile_button">Profile Button</string>
    <string name="reward_button">Reward Button</string>
    <string name="title_activity_maps">Map</string>
    <string name="drawer_history">History</string>
    <string name="navd_schedule">Schedule</string>
    <string name="news1">News 1</string>
    <string name="tv_getplace">Get Place</string>
    <string name="reward_points">Points</string>
    <string name="button_view">View</string>
    <string name="tab_browse">Browse</string>
    <string name="tab_myRewards">My Rewards</string>
    <string name="pick_date">Date</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="drawer_open">Open</string>

    <string name="drawer_close">Close</string>

    <string name="nav_item_home">main</string>

    <string name="nav_item_setting">setting</string>

    <string name="nav_item_exit">exit</string>
    <string name="profile_cancel">Cancel</string>
    <string name="booking_details">Booking Details</string>
    <string name="title_editprofile">Edit Profile</string>
    <string name="lblBookingDetails">Booking Details</string>
    <string name="btn_view">View</string>
    <string name="lblDate">Date</string>

    <string name="txtLocation">Location</string>
    <string name="txtWeight">Weight</string>
    <string name="txtRemarks">Remarks</string>


    <string name="date_select">Please Select Date</string>
    <string name="place_select">Please Select Location</string>
    <string name="time_select">Please Select Time</string>
    <string name="submit_book">Submit Request</string>
    <string name="btn_redeem">REDEEM</string>
    <string name="change_pro_pic">Change Profile Picture</string>
    <string name="private_info">Private Information</string>



    <string name="lblPoints">Points Available</string>
    <string name="upload">Update</string>
    <string name="DATABASENAME" translatable="false">wow_db</string>
    <string name="Location">Location</string>
    <string name="weightAppx">Weight</string>
    <string name="Time">Time</string>
    <string name="addPhoto">Photo</string>
    <string name="hintWeight">in kg</string>
    <string name="Refresh">Refresh</string>
    <string name="lblPointsRequired">Points Required</string>
    <string name="tv_points">Points</string>
    <string name="lblRewardDetails">Details</string>
    <string name="tv_details">Details</string>
    <string name="lbltnc">Terms and Conditions</string>
    <string name="tv_tnc">Terms and Conditions</string>
    <string name="record_type">Record Type</string>
    <string name="btn_back">Back</string>
    <string name="redeemReward">Claimed Reward(s)</string>
    <string name="textViewType">Type</string>
    <string name="btn_cancel">Cancel Booking</string>


    <string name="lblEmail">E-mail</string>
    <string name="lblName">Name</string>
    <string name="lblIcPass">IC/Passport Number</string>
    <string name="lblPhone">Phone Number</string>
    <string name="lblAddress">Address</string>
    <string name="lblUsername">Username</string>
    <string name="lblPassword">Password</string>
    <string name="lblCfmPassword">Confirm Password</string>
    <string name="txtTime">Time</string>

    <string name="txtStatus">Status</string>

    <string name="record_status">Status</string>
    <string name="labelBooking">Booking</string>
    <string name="txtDate">Date</string>
    <string name="lblLocation">Location</string>
    <string name="lblWeight">Weight</string>
    <string name="lblStatus">Status</string>
    <string name="lblImage">Image</string>
    <string name="lblRemarks">Remarks</string>
    <string name="lblType">Type</string>
    <string name="lblTime">Time</string>
    <string name="btn_booknow">Book Now</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_booking">Booking Details</string>
    <string name="nav_logout">Logout</string>
    <string name="pointAvailable">Points Available</string>
    <string name="lblCategory">Category</string>
    <string name="lblNews">News</string>

    <string name="thanksMsg">Thank you for recycling with us !!</string>
    <string name="receiveMsg">You may receive</string>
    <string name="pointsReceived">1000 POINTS</string>
    <string name="lblColAddress">Collection Address</string>
    <string name="lblColDate">Collection Date</string>
    <string name="lblColTime">Collection Time</string>
    <string name="btn_okay">Okay</string>
    <string name="BookingSummary">Booking Summary</string>



</resources>
