<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RewardDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_reward"
            android:layout_width="400dp"
            android:layout_height="130dp"
            android:layout_gravity="top"
            android:scaleType="centerCrop"
            android:src="@drawable/reward1" />

        <TextView
            android:id="@+id/lblPointsRequired"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblPointsRequired"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_points"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/tv_points" />

        <TextView
            android:id="@+id/lblRewardDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblRewardDetails"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_details"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:text="@string/tv_details" />

        <TextView
            android:id="@+id/lblTnc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Terms and Conditions"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_tnc"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:text="@string/tv_tnc" />

        <Button
            android:id="@+id/btn_redeem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#aed581"
            android:text="@string/btn_redeem" />


    </LinearLayout>


</RelativeLayout>