<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ConfirmActivity">

<TextView
    android:id="@+id/thanksMsg"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="30dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="10dp"
    android:text="@string/thanksMsg"
    android:textSize="20sp"
    app:layout_constraintBottom_toTopOf="@+id/lblReceive"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.506"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0" />

<TextView
    android:id="@+id/lblReceive"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="48dp"
    android:text="@string/receiveMsg"
    android:textSize="18sp"
    app:layout_constraintBottom_toTopOf="@+id/lblPointsReceived"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/thanksMsg" />

<TextView
    android:id="@+id/lblPointsReceived"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="8dp"
    android:text="@string/pointsReceived"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.501"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/lblReceive"
    android:textColor="#FF4500"
    />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="368dp"
        android:layout_height="181dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPointsReceived"
        app:layout_constraintVertical_bias="0.361"
        app:cardBackgroundColor="@color/color1">

        <TableLayout
            android:id="@+id/displayBSum"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_gravity="center"
            android:padding="5dp"
            >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|fill_vertical"

                >

                <TextView

                    android:id="@+id/lblColAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/lblColAddress"
                    android:textStyle="bold"
                    android:textColor="@color/color6"/>

                <TextView
                    android:id="@+id/rColAdd"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:padding="10dp"
                    android:text="10-10,PV15 Platinum Lake Condominuim, No2A Jalan Danau Saujana, 53300 Kuala Lumpur"
                     />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|fill_vertical">

                <TextView
                    android:id="@+id/lblColDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/lblColDate"
                    android:textStyle="bold"
                    android:textColor="@color/color6"
                    />

                <TextView
                    android:id="@+id/rColDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="1 July 2019"
                    />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|fill_vertical">

                <TextView
                    android:id="@+id/lblColTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/lblColTime"
                    android:textStyle="bold"
                    android:textColor="@color/color6"/>

                <TextView
                    android:id="@+id/rColTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="3.00 pm"
                     />

            </TableRow>


        </TableLayout>
    </androidx.cardview.widget.CardView>

<Button
    android:id="@+id/btnBack"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="8dp"
    android:text="@string/btn_back"
    android:background="#aed581"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/btnOkay"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/cardView" />

<Button
    android:id="@+id/btnOkay"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    android:text="@string/btn_okay"
    android:background="#aed581"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/btnBack"
    app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/lblDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/BookingSummary"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPointsReceived"
        app:layout_constraintVertical_bias="0.625"
        android:textStyle="bold"
        android:textSize="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>