<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">


    <ImageView
        android:id="@+id/iv_reward"
        android:layout_width="match_parent"
        android:layout_height="174dp"
        android:scaleType="centerCrop"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_picture"
        android:layout_width="145dp"
        android:layout_height="131dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/pp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_reward"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_reward"
        app:layout_constraintVertical_bias="0.402" />

    <TextView
        android:id="@+id/profile_fullname"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="Connor Franta"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/profile_picture"
        app:layout_constraintTop_toBottomOf="@+id/iv_reward" />

    <TextView
        android:id="@+id/profile_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Metal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/profile_picture"
        app:layout_constraintTop_toBottomOf="@+id/profile_fullname" />


    <androidx.cardview.widget.CardView
        android:layout_width="359dp"
        android:layout_height="140dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profile_username">


        <LinearLayout
            android:layout_width="363dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TableLayout

                android:layout_width="match_parent"
                android:layout_height="119dp"
                android:layout_gravity="center"
                android:padding="5dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|fill_vertical">


                    <TextView
                        android:id="@+id/lblDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/lblPoints"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/p_points"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:focusable="false"
                        android:gravity="center"
                        android:hint="@string/lblDate"
                        android:inputType="textMultiLine"
                        android:singleLine="true" />


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/texrViewType"
                        android:layout_width="52dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/lblCategory"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/p_category"
                        android:layout_width="258dp"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:focusable="false"
                        android:gravity="center"
                        android:hint="@string/lblStatus"
                        android:inputType="textMultiLine"
                        android:singleLine="true" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical">

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                </TableRow>


            </TableLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="369dp"
            android:layout_height="wrap_content">

        </LinearLayout>


    </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>


